Algunos refactors (compilationType typo fix, albumDTO agregado)